--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="manifest" href="manifest.json">
+    <script src="script.js" defer></script>
     <title>Snake</title>
 </head>
 
 <body>
     <header>
-        <h1>Snake</h1>
+        <h1>Snake v2</h1>
     </header>
     <main>
         <canvas id="canvas" width="350px" height="350px">
@@ -38,12 +39,10 @@
     </main>
 
     <footer>
-        <a href="https://c8in4.github.io/" target="_blank">
+        <a href="https://c8in4.github.io/" target="_self">
             made by c8in4
         </a>
     </footer>
-
-    <script src="script.js"></script>
 </body>
 
 </html>
