Adjust canvas size to fit phone screens

--- a/index.html
+++ b/index.html
@@ -19,16 +19,14 @@
     <header>
         <h1>Snake</h1>
     </header>
-    <main class="flex-column justify-content-space-between align-items-center">
+    <main class="flex-column align-items-center">
         <canvas id="canvas">
         </canvas>
         <button type="button" id="startButton">Start</button>
         <div class="text-align-center">
-            Counter:
-            <span id="counter">0</span>
+            Counter: <span id="counter">0</span>
             <div>
-                Highscore:
-                <span id="highScore">0</span>
+                Highscore: <span id="highScore">0</span>
             </div>
         </div>
     </main>
